--- a/styles.scss
+++ b/styles.scss
@@ -123,35 +123,50 @@ body{
     width: 100vw;
     inset: 0;
     transform: translateY(100%);
-    display: flex;
-    justify-content: center;
+    display: grid;
     align-items: center;
+    grid-template-columns: Min(30vw, 310px) calc(100vw - (Min(30vw, 310px))); 
+    // matched the size and then the rest of the viewport width would go the the info page.
+    grid-template-areas: 
+        "image info";
     padding: 0 Min(100px, 2vw);
     box-shadow: 0 0 10px 5px #ffffff80;
 }
 
 .champ-info-img{
     margin: 0;
-    height: Min(50vw, 560px);
-    width: Min(30vw, 300px);
+    grid-area: image;
+    width: Min(30vw, 310px);
+    height: Min(54vw, 560px);
 }
+
+.champ-info-img-small{
+    display: none;
+}
+
     /* main info --- the right side of info page */
 .main-info-container{
     height: Min(100vw, 560px);
-    width: calc(100% - (Min(30vw, 300px)));
+    width: calc(100vw - (Min(30vw, 310px)));
     background: #33333399;
     display: flex;
     flex-direction: column;
-    padding: 50px;
-    
+    padding: 30px 80px 30px 40px;
+    overflow: auto;
+    grid-area: info;
 }
 
         /* champ name*/
 .champ-info-name{
     color: $lightest;
-    font-size: 2.5rem;
-    margin: 0 0 30px;
-    box-shadow: 0 0 3px #ffffff15;
+    font-size: Clamp(1.4rem, 3.5vw, 2.5rem);
+    margin: 0;
+}
+
+.champ-info-title{
+    font-size: Clamp(0.8rem, 1.5vw, 1.5rem);
+    color: $light;
+    margin: 5px 0 10px;
 }
 
         /* nav */
@@ -184,9 +199,10 @@ body{
     background: $dark;
 }
 
+        /* body of info modal */
 .lore-text{
     color: $light;
-    font-size: 0.9rem;
+    font-size: Clamp(0.75rem, 1.7vw, 1.2rem);
     font-weight: 900;
     text-align: justify;
     outline: none;
@@ -203,6 +219,10 @@ body{
     margin: 30px auto;
     display: flex;
     gap: 20px;
+}
+
+.champ-info-skill-img{
+    height: Max(50px, 4vw);
 }
 
 .close-modal-btn{
@@ -240,5 +260,34 @@ body{
     .search{
         width: Min(220px, 30vw);
         margin-left: 10px;
+    }
+}
+
+@media all and (max-width: 600px){
+    .champ-info{
+        grid-template-rows: Min(30vw, 310px) calc(100vh - (Min(30vw, 310px))); ;
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+            "image"
+            "info";
+    }
+
+    .champ-info-img{
+        display: none;
+    }
+
+    .champ-info-img-small{
+        display: block;
+        grid-area: image;
+        height: Min(30vw, 310px);
+        width: 50vw;
+        justify-self: center;
+    }
+
+    .main-info-container{
+        grid-area: info;
+        width: 100vw;
+        height: calc(100vh - (Min(30vw, 310px)));
+        bottom: 0;
     }
 }
